<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="add_book_cover_description">Image for cover of the book being added</string>
    <string name="add_book_description">Add a book</string>
    <string name="add_menu_button">Add</string>
    <string name="app_name">BookWorm</string>
    <string name="best_sellers">NY Times Best Sellers %1$s</string>
    <string name="best_sellers_failed">Couldn\'t load best-sellers</string>
    <string name="book_in">IN</string>
    <string name="book_out">OUT</string>
    <string name="cancel">Cancel</string>
    <string name="capture_button_description">Button to capture barcode image</string>
    <string name="clear">Clear</string>
    <string name="currently_reading_iv_description">Currently reading book cover</string>
    <string name="description_book_cover">Cover of book</string>
    <string name="done">Done</string>
    <string name="error_adding_book">Add Failed</string>
    <string name="filter_icon_description">Icon to filter best-sellers by category</string>
    <string name="hint_author">Author</string>
    <string name="hint_categories">Categories separated by spaces</string>
    <string name="hint_isbn">ISBN</string>
    <string name="hint_pages">Pages</string>
    <string name="hint_published">Published</string>
    <string name="hint_title">Title</string>
    <string name="hint_year">Year</string>
    <string name="home">Home</string>
    <string name="image_preview_description">Preview of captured image</string>
    <string name="library">Library</string>
    <string name="msg_book_added">Book Added</string>
    <string name="no_results">No Results for this list &#128528;</string>
    <string name="num_pages"># of Pages</string>
    <string name="retry">Retry</string>
    <string name="scan_button_description">Button to scan ISBN bar code</string>
    <string name="search">Search</string>
    <string name="search_menu_button">Search</string>
    <string name="settings">settings</string>
    <string name="sort">Sort</string>
    <string name="sort_icon_description">sort by icon</string>
    <string name="string_edit">Edit</string>
    <string name="year_published">Year</string>
    <string name="cd_book_cover">Book cover</string>
    <string name="description">Description</string>
    <string name="long_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id velit ut tortor pretium viverra suspendisse potenti. Laoreet non curabitur gravida arcu ac tortor dignissim convallis. Felis imperdiet proin fermentum leo vel. Neque egestas congue quisque egestas diam in. Est sit amet facilisis magna etiam tempor orci eu. Suspendisse sed nisi lacus sed. Sed felis eget velit aliquet sagittis. Tristique nulla aliquet enim tortor. Ornare lectus sit amet est placerat in. Mattis pellentesque id nibh tortor id aliquet lectus. Amet nulla facilisi morbi tempus iaculis urna id volutpat. Amet dictum sit amet justo donec enim diam. Massa tempor nec feugiat nisl pretium fusce id. Urna nunc id cursus metus. Eget mauris pharetra et ultrices neque ornare. In pellentesque massa placerat duis ultricies lacus.

Morbi non arcu risus quis varius quam. Lorem mollis aliquam ut porttitor leo. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Lacus laoreet non curabitur gravida arcu ac tortor dignissim convallis. Sed libero enim sed faucibus turpis in eu. Nec nam aliquam sem et tortor. Elit ullamcorper dignissim cras tincidunt lobortis feugiat. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Tellus orci ac auctor augue mauris augue neque. Condimentum vitae sapien pellentesque habitant morbi tristique. Magna etiam tempor orci eu lobortis elementum nibh. Nunc sed id semper risus in. Ullamcorper morbi tincidunt ornare massa eget egestas purus. Risus feugiat in ante metus dictum. Risus feugiat in ante metus dictum. Ipsum faucibus vitae aliquet nec. Sed egestas egestas fringilla phasellus.

Ipsum suspendisse ultrices gravida dictum fusce. Semper eget duis at tellus at urna condimentum mattis. In iaculis nunc sed augue lacus viverra vitae congue eu. Posuere ac ut consequat semper viverra. Enim ut tellus elementum sagittis vitae et. Quis vel eros donec ac. Vel turpis nunc eget lorem dolor sed viverra ipsum. Amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Nunc non blandit massa enim nec dui nunc mattis enim. Gravida cum sociis natoque penatibus. Volutpat commodo sed egestas egestas fringilla phasellus faucibus. Sed sed risus pretium quam vulputate. Scelerisque mauris pellentesque pulvinar pellentesque. Molestie at elementum eu facilisis sed odio morbi. Urna id volutpat lacus laoreet non curabitur gravida arcu. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Felis imperdiet proin fermentum leo vel orci porta non. Dis parturient montes nascetur ridiculus mus mauris vitae.

Arcu dui vivamus arcu felis bibendum ut. Elementum curabitur vitae nunc sed velit. Commodo quis imperdiet massa tincidunt nunc. Scelerisque eu ultrices vitae auctor eu augue ut lectus. Nunc scelerisque viverra mauris in aliquam sem. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. Dui accumsan sit amet nulla facilisi morbi. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Enim nec dui nunc mattis enim. Lectus mauris ultrices eros in cursus turpis massa. Sed elementum tempus egestas sed sed.

</string>
</resources>
